--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.0.5",
-    "redux-devtools-extension": "^2.13.8",
+    "redux-logger": "^3.0.6",
     "thunk": "0.0.1",
     "web-vitals": "^1.1.0"
   },
