--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
+    "reselect": "^4.0.0",
     "thunk": "0.0.1",
     "web-vitals": "^1.1.0"
   },
